...
import 'package:local_auth/local_auth.dart';

enum DeviceAuthResult {
  success,
  failed,
  cancelled,
  unavailable,
  error,
}

abstract class DeviceAuthenticator {
  Future<bool> canAuthenticate();

...
